--- a/index.html
+++ b/index.html
@@ -115,31 +115,31 @@
                     sequi
                     nihil quisquam id nesciunt debitis illum cor</p>
             </section>
-        </div>
-        <!--Cierre Clases de servicios-->
+        </div><!--Cierre Clases de servicios-->
         <section>
             <h2>Contacto</h2>
             <form class="formulario" action="">
                 <fieldset>
                     <legend>Contactame llenando todos los campos</legend>
                     <div class="contenedor-campos">
-                    <div class="campo">
-                        <label for="">Nombre</label>
-                        <input class="input-text" type="text" placeholder="Tu Nombre">
+                        <div class="campo">
+                            <label for="">Nombre</label>
+                            <input class="input-text" type="text" placeholder="Tu Nombre">
+                        </div>
+                        <div class="campo">
+                            <label for="">Telefono</label>
+                            <input class="input-text" type="tel" placeholder="Teléfono">
+                        </div>
+                        <div class="campo">
+                            <label for="">correo</label>
+                            <input class="input-text" type="email" placeholder="email">
+                        </div>
+                        <div class="campo">
+                            <label for="">Mensaje</label>
+                            <textarea class="input-text" name="" id="" cols="30" rows="10"></textarea>
+                        </div>
                     </div>
-                    <div class="campo">
-                        <label for="">Telefono</label>
-                        <input class="input-text" type="tel" placeholder="Teléfono">
-                    </div>
-                    <div class="campo">
-                        <label for="">correo</label>
-                        <input class="input-text" type="email" placeholder="email">
-                    </div>
-                    <div class="campo">
-                        <label for="">Mensaje</label>
-                        <textarea class="input-text" name="" id="" cols="30" rows="10"></textarea>
-                    </div>
-                </div><!--contenededor-campos-->
+                    <!--contenededor-campos-->
                     <div class="alinear-derecha flex">
                         <input class="boton w-sm-100" type="submit" value="Enviar">
                     </div>
