Se agrego el scroll automatico al proyecto scroll snap

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </form>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p>Todos los derechos reservados. Jose Carcamo Freelancer</p>
     </footer>
 
