--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1 class="titulo">José Cárcamo <span>Freelancer</span></h1>
+        <h1 class="titulo">José Cárcamo <span>Freelancer 2022</span></h1>
 
     </header>
     <div class="nav-bg">
